Enable preview features and add JEP 530 primitive type pattern tests
Adds --enable-preview to the ReloadableJavaNextParser compiler options so
the parser can handle preview language features like JEP 530 (Primitive
Types in Patterns, instanceof, and switch). Adds tests for primitive type
patterns in switch expressions and instanceof with guards, narrowing
conversions, and different primitive types (int, long, float).